Creating a new build

--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Github Profile Viewer</title>
-  <link rel="stylesheet" href="app/css/bootstrap.min.css">
-  <link rel="stylesheet" href="app/css/style.css">
+  <link rel="stylesheet" href="./css/bootstrap.min.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-2">
@@ -32,8 +32,8 @@
   </footer>
   
   <!-- jQuery -->
-  <script src="app/js/jquery-3.3.1.min.js"></script>
+  <script src="./js/jquery-3.3.1.min.js"></script>
   <!-- Bundled JS File -->
-  <!-- <script src="./main.js"></script> For webpack-dev-server -->
+  <script src="./js/main.js"></script>
 </body>
 </html>
