--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Github Profile Viewer</title>
-<link href="main.css" rel="stylesheet"></head>
+</head>
 <body>
   <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-2">
     <div class="container">
@@ -29,5 +29,5 @@
     Made with ♥ with React and Bootstrap
   </footer>
 
-<script type="text/javascript" src="main.js"></script></body>
+</body>
 </html>
